# whathappened

./: .git-blame-ignore-revs  .gitignore  .tool-versions  Byggfile.toml  DEVELOPMENT.md  MANIFEST.in  Makefile  Pipfile  README.md  config.py  dump.py  example.db  package-lock.json  package.json  prestart.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tsconfig.json  whathappened.py
.github/: dependabot.yml
.github/workflows/: python-package.yml
alembic/: env.py
alembic/versions/: 19c65a2adda3_initial_db.py
app/: __init__.py  auth.py  charactersheet.py  deps.py  email.py  initial_data.py  logging.py  main.py  models.py  profile.py  routes.py  views.py
app/auth/: __init__.py  forms.py  models.py  routes.py
app/campaign/: __init__.py  api.py  forms.py  models.py  routes.py  views.py
app/cards/: __init__.py
app/character/: __init__.py  coc.py  core.py  forms.py  models.py  routes.py
app/character/coc7e/: __init__.py  convert.py  forms.py  mechanics.py  routes.py  utils.py
app/character/schema/: __init__.py  coc.json  coc.py  coc7e.json  coc7e.py  swd6.yaml  tftl.json  tftl.yaml
app/character/swd6/: __init__.py  blank_character.yaml  mechanics.py
app/character/tftl/: __init__.py  blank_tftl.yaml  forms.py  mechanics.py  routes.py
app/charactersheet/: __init__.py  blank_character.json.jinja  coc.py  forms.py  models.py  routes.py
app/content/: __init__.py  forms.py  mixins.py  models.py  routes.py
app/crud/: base.py  crud_user.py
app/database/: __init__.py  cli.py  fields.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/main/: __init__.py  forms.py  routes.py
app/map/: __init__.py  routes.py
app/models/: recipe.py  user.py
app/schemas/: __init__.py  recipe.py
app/static/: all.css  campaign.css  character.css  character.scss  coc.ts  profile.css
app/static/scss/: campaign.scss  character.scss  handout.scss  main.scss  markdown.scss  profile.scss
app/static/ts/: campaign.ts  coc.ts  handout.ts  sheet.ts
app/templates/: base.html.jinja  index.html  shell.html.jinja
app/templates/auth/: login.html.jinja  register.html.jinja  reset_password.html.jinja  reset_password_request.html.jinja
app/templates/campaign/: campaign.html.jinja  edit.html.jinja  joincampaign.html.jinja  removeplayer.html.jinja
app/templates/character/: api_share.html.jinja  blank_character.json.jinja  coc_create.html.jinja  index.html.jinja  (+5 more)
app/userassets/: forms.py  models.py  routes.py
app/utils/: dice.py  schema.py
extras/: Vagrantfile  playbook.yaml  playbook.yml
extras/etherpad/: docker-compose.yml  nginx.conf
extras/vm/: playbook.yaml  vars.yml
frontend/: package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
frontend/__tests__/: common.test.ts  widget.test.ts
frontend/src/: common.ts
migrations/: alembic.ini  env.py
migrations/versions/: 12c624442821_add_assets.py  186d10393f49_add_campaign_settings.py  243dcd43e639_add_email_to_users.py  272d779fe7cb_initial.py  27799ac97853_rename_usertable.py  6c3ad34a9034_.py  71a3d1badc2e_add_campaigns.py  a425da83bea3_add_messages_to_campaign.py  ac772b7261d0_add_metadata_naming_conventions.py  b10c98640b7c_add_content_folders.py  d81325dd065a_initial_db_commit.py  e74859f2a25c_add_invites.py  f047bb8f937f_add_handout_status.py
oldtests/: test_auth.py  test_character.py  test_user.py  test_utils_schema.py  test_whathappened.py
oldtests/coc7e/: test_coc7e.py  testchar.json
oldtests/tftl/: test_tftl.py
schema/: character_sheet.yaml
src/: whathappened.py
src/whathappened/: __init__.py  config.py  email.py  models.py  profile.py
tests/: conftest.py  data.sql  support.py  test_auth.py  test_campaign.py  test_campaign_forms.py  test_campaign_models.py  test_campaign_routes.py  test_character.py  test_character_access.py  test_character_forms.py  test_character_models.py  test_character_schema.py  test_coc.py  test_database.py  test_db.py  test_dice.py  test_factory.py  test_mechanics.py  test_sheets.py  test_systems.py  test_tftl.py  test_user.py  test_userasset_models.py  test_utils_collections.py  test_utils_schema.py  test_whathappened.py  testchar.json  testchar_dholes.json
tests/cards/: test_deck.yaml  test_deck_of_cards.py
tests/coc7e/: test_chargen.py  test_coc7e.py  test_routes.py  testchar.json
tests/games/: test_mechanics.py  test_systems.py  test_utils_schema.py
tests/landf/: test_landf.py
tests/models/: test_campaign_models.py  test_character_models.py  test_userasset_models.py
tests/sheets/: test_base.py  test_basics.py  test_dod.py  test_landf.py  test_mechanics.py  test_migration.py  test_schema.py  test_schema.yml  test_sheets.py  test_systems.py  test_utils_schema.py  utils.py
tests/swd6/: test_swd6.py
tests/tftl/: test_tftl.py
tests/web/: test_campaign_forms.py  test_campaign_routes.py  test_character_forms.py
tests/whathappened/: test_auth.py  test_character_access.py  test_database.py  test_factory.py  test_user.py
whathappened/: __init__.py  api.py  app.py  auth.py  charactersheet.py  config.py  db.py  email.py  environment.py  models.py  profile.py  schema.sql
whathappened/assets/: __init__.py
whathappened/auth/: __init__.py  backend.py  flask_blueprint.py  forms.py  models.py  routes.py
whathappened/campaign/: __init__.py  api.py  forms.py  models.py  routes.py  views.py
whathappened/character/: __init__.py  core.py  forms.py  models.py  routes.py
whathappened/content/: __init__.py  forms.py  mixins.py  models.py  routes.py
whathappened/database/: __init__.py  base.py  cli.py  pagination.py
whathappened/forms/: base.py
whathappened/main/: __init__.py  forms.py  routes.py
whathappened/migrations/: env.py
whathappened/sheets/: __init__.py  main.py  utils.py
whathappened/static/: all.css  main.scss  style.css
whathappened/templates/: base.html.jinja  hello.html.jinja  shell.html.jinja
whathappened/userassets/: __init__.py  forms.py  models.py  routes.py
whathappened/utils/: __init__.py  collections.py
(+397 files in other folders)
