[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "whathappened"
dynamic = ["version"]


authors = [{ name = "Greger Stolt Nilsen", email = "gregersn@gmail.com" }]
description = "A minimalistic TTRPG package."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic",
    "email-validator",
    "Flask-Login",
    "Flask-Mail",
    "Flask-WTF",
    "flask",
    "gunicorn",
    "itsdangerous",
    "Jinja2",
    "jsonschema",
    "markdown2",
    "packaging",
    "Pillow",
    "PyJWT",
    "pyScss @ git+https://github.com/Kronuz/pyScss.git",
    "python-dotenv",
    "PyMysql",
    "PyYAML",
    "SQLAlchemy",
    "werkzeug==3.1.3",
    "pelican-webassets",
    "jinja2-webpack",
    "pydantic",
    "pydantic-settings",
]


[project.optional-dependencies]
development = [
    "pytest",
    "pytest-cov",
    "wheel",
    "pylint",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/gregersn/whathappened"
"Bug Tracker" = "https://github.com/gregersn/whathappened/issues"

[tool.setuptools_scm]
version_file = "src/whathappened/_version.py"

[tool.pytest]
testpaths = "tests"

[tool.pytest.ini_options]
pythonpath = ['src']

[tool.pyright]
typeCheckingMode = "standard"

[coverage.run]
branch = true
source = "whathappened"


[tool.pylint.main]

# Files or directories to be skipped. They should be base names, not paths.
ignore = ["CVS", "migrations"]

# Add files or directories matching the regular expressions patterns to the
# ignore-list. The regex matches against paths and can be in Posix or Windows
# format. Because '\\' represents the directory delimiter on Windows systems, it
# can't be used as an escape character.
# ignore-paths =

# Files or directories matching the regular expression patterns are skipped. The
# regex matches against base names, not paths. The default value ignores Emacs
# file locks
ignore-patterns = ["^\\.#"]

# List of module names for which member attributes should not be checked (useful
# for modules/projects where namespaces are manipulated during runtime and thus
# existing member attributes cannot be deduced by static analysis). It supports
# qualified module names, as well as Unix pattern matching.
# ignored-modules =

# Pickle collected data for later comparisons.
persistent = true

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.11"
