[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "whathappened"
dynamic = ["version"]


authors = [{ name = "Greger Stolt Nilsen", email = "gregersn@gmail.com" }]
description = "A minimalistic TTRPG package."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "alembic==1.18.4",
    "email-validator==2.3.0",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-wtf==1.2.2",
    "flask==3.1.3",
    "gunicorn==25.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "markdown2==2.5.5",
    "packaging==26.0",
    "pillow==12.2.0",
    "pyjwt==2.12.1",
    "pyscss",
    "python-dotenv==1.2.2",
    "pymysql==1.1.2",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.49",
    "werkzeug==3.1.8",
    "pelican-webassets==2.1.0",
    "jinja2-webpack==0.2.0",
    "pydantic==2.13.0",
    "pydantic-settings==2.13.1",
    "wtforms==3.2.1",
]


[project.optional-dependencies]
development = [
    "pytest",
    "pytest-cov",
    "wheel",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/gregersn/whathappened"
"Bug Tracker" = "https://github.com/gregersn/whathappened/issues"

[tool.setuptools_scm]
version_file = "src/whathappened/_version.py"

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
typeCheckingMode = "standard"

[coverage.run]
branch = true
source = "whathappened"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-dependency>=0.6.1",
    "ruff>=0.15.5",
    "setuptools>=82.0.1",
    "wheel==0.46.3",
]


[tool.pylint.main]

# Files or directories to be skipped. They should be base names, not paths.
ignore = ["CVS", "migrations"]

# Add files or directories matching the regular expressions patterns to the
# ignore-list. The regex matches against paths and can be in Posix or Windows
# format. Because '\\' represents the directory delimiter on Windows systems, it
# can't be used as an escape character.
# ignore-paths =

# Files or directories matching the regular expression patterns are skipped. The
# regex matches against base names, not paths. The default value ignores Emacs
# file locks
ignore-patterns = ["^\\.#"]

# List of module names for which member attributes should not be checked (useful
# for modules/projects where namespaces are manipulated during runtime and thus
# existing member attributes cannot be deduced by static analysis). It supports
# qualified module names, as well as Unix pattern matching.
# ignored-modules =

# Pickle collected data for later comparisons.
persistent = true

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.11"

[tool.uv.sources]
pyscss = { git = "https://github.com/Kronuz/pyScss.git" }
